cloudformation/MyWork/fundamental_templates/ResourceCreation.yaml
AWSTemplateFormatVersion: 2010-09-09
#This Template will have most used infrastructure resource. Will not be attached or depondon each other.
Resources:
  Ec2InstanceOne:
    Type: AWS::EC2::Instance
#    DeletionPolicy: Retain # options are Retain, Delete and Snapshot
    Properties:
      AvailabilityZone: eu-west-1a
      ImageId: ami-466768ac
      InstanceInitiatedShutdownBehavior: terminate #stop or Terminate
      InstanceType: t2.micro
      KeyName: Resources # If we are mentioning in Parameters we have to mention AWS::EC2::KeyPair::KeyName
      Monitoring: False # It can be either true or false, if you don't mention it will do a basic monitoring if you enable it will do a details monitoring
      SecurityGroupIds:
        - !Ref Ec2SecurityGroup # This need to be used if you are using VPC in your SecurityGroup
#    SecurityGroups:
#      - !Ref Ec2SecurityGroup
      SubnetId: !Ref MySubnet

  Ec2SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: This is to allow HTTP site access
      VpcId: !Ref MyVpc
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
  MyVpc:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 192.168.0.0/16

  MySubnet:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: eu-west-1a
      CidrBlock: 192.168.1.0/24
      VpcId: !Ref MyVpc
